# Great-Idea-lab-QKD

./: CMakeLists.txt  README.md  plan.md
src/: CMakeLists.txt  main.cpp
src/actors/: listener.cpp  listener.h  receiver.cpp  receiver.h  sender.cpp  sender.h
src/quantum_lib/: qubit.cpp  qubit.h
